trying to fix text no visible on mobilee

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -1,4 +1,4 @@
-header {
+body {
     position: relative;       /* so you desktop show inside header */
   }
 
